<resources>
    <!--
    <string name="app_name">Notepad</string>
    -->
    <string name="hint_title">Type title ...</string>
    <string name="hint_body">Type body ...</string>
    <!--
     <string name="button_save">Save</string>
     <string name="empty_not_saved">Note not saved because title is empty.</string>
      -->
     <string name="add_note">Add note</string>
     <string name="menu_delete">Eliminar</string>
     <string name="menu_edit">Editar</string>
    <string name="menu_send">Enviar</string>
     <string name="title">Title</string>
     <string name="body">Body</string>


    <!-- General -->
    <string name="app_name">T234_Comidas</string>

    <string name="button_save">Guardar</string>
    <string name="button_platos">Platos</string>
    <string name="button_pedidos">Pedidos</string>
    <string name="button_pruebasUnitarias">Pruebas unitarias</string>
    <string name="button_pruebasVolumen">Pruebas volumen</string>
    <string name="button_BorrarPruebasVolumen">Borrar objetos</string>
    <string name="button_pruebasSobrecarga">Pruebas sobrecarga</string>

    <string name="Pruebas_a_realizar">PRUEBAS</string>

    <string name="hint_nombrePlato">Escriba el nombre del plato</string>
    <string name="hint_descripcionPlato">Escriba la descripcion del plato</string>
    <string name="hint_categoriaPlato">Escoja la categoria del plato</string>
    <string name="hint_precioPlato">Escriba el precio del plato</string>

    <string name="add_plato">Añadir Plato</string>
    <string name="sort_platos_by_name">Ordenar por nombre</string>
    <string name="sort_platos_by_category">Ordenar por categoria</string>
    <string name="sort_platos">Ordenar por nombre y categoria</string>
    <string name="delete_plato">Borrar Plato</string>
    <string name="edit_plato">Editar Plato</string>

    <string name="nombrePlato">Nombre del Plato</string>
    <string name="descripcionPlato">Descripcion del Plato</string>
    <string name="categoriaPlato">Categoria</string>
    <string name="precioPlato">Precio</string>

    <string name="nombreAPP">Aplicacion de comidas</string>
    <string name="EditCreate_Platos">Platos</string>
    <string name="EditCreate_Pedidos">Pedidos</string>


    <!-- Pedido -->
    <string name="hint_nombreCliente">Escriba el nombre del cliente</string>
    <string name="hint_telefonoCliente">Escriba el teléfono del cliente</string>
    <string name="hint_estadoPedido">Escoja el estado del pedido</string>
    <string name="hint_fechaRecogida">Fecha</string>
    <string name="hint_horaRecogida">Hora</string>
    <string name="hint_precioPedido">Precio del pedido</string>

    <string name="add_pedido">Añadir Pedido</string>
    <string name="delete_pedido">Borrar Pedido</string>
    <string name="edit_pedido">Editar Pedido</string>

    <string name="nombreCliente">Nombre del Cliente</string>
    <string name="telefonoCliente">Teléfono del Cliente</string>
    <string name="estadoPedido">Estado</string>
    <string name="momentoRecogida">Momento de recogida</string>
    <string name="platosRaciones">Platos y raciones</string>
    <string name="precioPedido">Precio del pedido</string>


    <!-- Errores de guardado -->
    <!-- Platos -->
    <string name="empty_not_saved_platos">Plato no guardado: Faltan campos por rellenar.</string>
    <string name="not_saved_full_platos">Plato no guardado: Se ha alcanzado el maximo de platos a almacenar.</string>
    <string name="unicidad_not_saved_platos">Plato no guardado: Ya existe un plato con ese nombre.</string>
    <string name="precio_not_saved_platos">Plato no guardado: El precio especificado no es valido.</string>
    <string name="categoria_not_saved_platos">Plato no guardado: La categoria especificada no es valida.</string>

    <string name="empty_not_saved_pedidos">Pedido no guardado: Faltan campos por rellenar.</string>
    <string name="not_saved_full_pedidos">Pedido no guardado: Se ha alcanzado el maximo de pedidos a almacenar.</string>
    <string name="estado_not_saved_pedidos">Pedido no guardado: El estado especificado no es valido.</string>
    <string name="telefono_not_saved_pedidos">Pedido no guardado: El telefono especificado no es valido.</string>
    <string name="momento_not_saved_pedidos">Pedido no guardado: El momento de recogida especificado es anterior a la creacion del pedido.</string>
    <string name="lunes_not_saved_pedidos">Pedido no guardado: El dia de recogida especificado no puede ser lunes.</string>
    <string name="fuera_horario_not_saved_pedidos">Pedido no guardado: La hora especificada esta fuera del horario valido.</string>
    <string name="fecha_formato_not_saved_pedidos">Pedido no guardado: La fecha especificada no tiene un formato valido.</string>
    <string name="hora_formato_not_saved_pedidos">Pedido no guardado: La hora especificada no tiene un formato valido.</string>


    <string-array name="ordenarPlatos">
        <item>Ordenar por nombre</item>
        <item>Ordenar por categoria</item>
        <item>Ordenar por nombre y categoria</item>
    </string-array>

    <string-array name="ordenarPedidos">
        <item>Ordenar por nombre de cliente</item>
        <item>Ordenar por telefono</item>
        <item>Ordenar por momento de recogida</item>
        <item>Ordenar por todo</item>
    </string-array>


    <string-array name="filtrarPedidos">
        <item>Mostrar todos</item>
        <item>Mostrar solo solicitados</item>
        <item>Mostrar solo preparados</item>
        <item>Mostrar solo recogidos</item>
    </string-array>



</resources>