<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/nombreAPP"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#FFFFFF"
            android:textSize="34sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/black"
        android:orientation="horizontal"></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/secondColor"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="@string/EditCreate_Pedidos"
            android:textSize="24sp"
            tools:textAlignment="center" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/black"
        android:orientation="horizontal"></LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/big_padding"
        android:layout_marginTop="@dimen/big_padding"
        android:shadowColor="@color/black"
        android:text="@string/nombreCliente"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/nombreClientePedido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/big_padding"
        android:layout_marginRight="@dimen/big_padding"
        android:background="@color/white"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_nombreCliente"
        android:inputType="text|textAutoCorrect"
        android:minHeight="@dimen/min_height"
        android:paddingLeft="@dimen/small_padding"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/big_padding"
        android:layout_marginTop="@dimen/big_padding"
        android:shadowColor="@color/black"
        android:text="@string/telefonoCliente"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/telefonoClientePedido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/big_padding"
        android:layout_marginRight="@dimen/big_padding"
        android:background="@color/white"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_telefonoCliente"
        android:inputType="number"
        android:minHeight="@dimen/min_height"
        android:paddingLeft="@dimen/small_padding"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/big_padding"
        android:layout_marginTop="@dimen/big_padding"
        android:shadowColor="@color/black"
        android:text="@string/estadoPedido"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/estadoPedido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/big_padding"
        android:layout_marginRight="@dimen/big_padding"
        android:background="@color/white"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_estadoPedido"
        android:inputType="text|textLongMessage|textMultiLine"
        android:minHeight="@dimen/min_height"
        android:paddingLeft="@dimen/small_padding"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/big_padding"
        android:layout_marginTop="@dimen/big_padding"
        android:shadowColor="@color/black"
        android:text="@string/momentoRecogida"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/fechaPedidoRecogida"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/big_padding"
        android:layout_marginRight="@dimen/big_padding"
        android:background="@color/white"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_fechaRecogida"
        android:inputType="text|textAutoCorrect"
        android:minHeight="@dimen/min_height"
        android:paddingLeft="@dimen/small_padding"
        android:textSize="18sp" />
    <EditText
        android:id="@+id/horaPedidoRecogida"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/big_padding"
        android:layout_marginRight="@dimen/big_padding"
        android:background="@color/white"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_horaRecogida"
        android:inputType="text|textAutoCorrect"
        android:minHeight="@dimen/min_height"
        android:paddingLeft="@dimen/small_padding"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/big_padding"
        android:layout_marginTop="@dimen/big_padding"
        android:shadowColor="@color/black"
        android:text="@string/precioPedido"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/precioPedido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/big_padding"
        android:layout_marginRight="@dimen/big_padding"
        android:background="@color/white"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_precioPedido"
        android:inputType="text|textAutoCorrect"
        android:minHeight="@dimen/min_height"
        android:paddingLeft="@dimen/small_padding"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button_pedidos"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="@dimen/big_padding"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/button_save"
        android:textColor="@color/black"
        android:textSize="22dp" />

</LinearLayout>
