<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/nombreAPP"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#FFFFFF"
            android:textSize="34sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/black"
        android:orientation="horizontal"></LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/black"
        android:orientation="horizontal"></LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="148dp" />

    <Button
        android:id="@+id/button_platos"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="@dimen/big_padding"
        android:backgroundTint="@color/colorMiddle"
        android:text="@string/button_platos"
        android:textColor="@color/black"
        android:textSize="22sp" />

    <Button
        android:id="@+id/button_pedidos"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="@dimen/big_padding"
        android:backgroundTint="@color/colorMiddle"
        android:text="@string/button_pedidos"
        android:textColor="@color/black"
        android:textSize="22sp" />

    <Button
        android:id="@+id/button_pruebas"
        android:layout_width="147dp"
        android:layout_height="61dp"
        android:layout_margin="@dimen/big_padding"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/button_pruebas"
        android:textColor="@color/black"
        android:textSize="22sp" />

</LinearLayout>
